  to make their own modifications.
* Fixed a benign bug in the block computation list that would cause it to get
  extended prematurely
* Numerous small improvements to memory allocation routines
* Added routines to copy a Voronoi cell
* Created a new wall_list class to handle a list of walls. This simplifies the
  command-line utility code.
* The routines that put particles into a container now do so more reliably for
  periodic cases, remapping them into the primary domain if necessary 
* Fixed a bug in the print_all_custom() routine, affecting "%P" output. Thanks
  to David Waroquiers (Université Catholique de Louvain, Belgium) for pointing
  this out.
* Fixed a bug that caused the neighbor list not to be outputted in the same
  order as the other plane diagnostic routines.  Thanks to Olufemi Olorode
  (Texas A&M University) for pointing this out.
* Removed the add_vertex() and init_test() routines, which were mainly used for
  debugging
* A man page about Voro++ can now be installed
* Updated Doxyfile to 1.7.4

Version 0.3.1 (September 29, 2009)
==================================
* Carried out a major overhaul of the source code comments that are used by
  Doxygen. Several errors in the documentation were fixed.
* Additional comments in the Makefiles, and added the "phony target" keyword
* Many code cleanups and standardizations. Some double and triple loops
  were concatenated into one to reduce the amount of indentation.
* Fixed the import.cc example program
* Updated Doxyfile to 1.6.1

Version 0.3 (August 17, 2009)
=============================
* In response to feedback from several people, the routines for computing
  statistics about computed Voronoi cells have been significantly revised,
  extended, and put within a common framework. The voronoicell class now has a
  large number of routines of the form output_...() that will print cell
  information to an output stream. There are also a number of new, simple